30 January 2023
Undid change made 2022.09.13

1 December 2022
Built-in function ugc$<atom> returns Unicode General Class. 
Predefined function let$<atom> says whether character could be part of a word
(a letter or a marking).

4 October, (Both Bracmat and Potu): Fixed an error in the computation of an expression's
'complexity'. The (not serious) error sometimes caused indentation to go awry.

18 September 2022
Fixed bugs, so we can compute points in te Mandelbrot set.

16 September 2022
Built in object type "calculation", meant to do floating point calculations with
C doubles, evading conversions to other types during the computations. Uses threaded
code, inspired by Forth.

25 June 2022
bracmat (6.11.1): New option 'WYD' for 'lst' and 'put', creating wider lines
(~120 instead of ~80 characters).
potu (6.11.1): Renamed 'WID' to 'WYD'.

25 June 2022
potu (6.11.0): New option 'WID' for 'lst' function, creating wider lines (~120 instead
of ~80 characters).

2 May 2022
New built-in function mop$ iterates over terms/factors/elements and outputs a
space operator separated list. 
E.g.            mop$((=.!arg).2*a+i*b+e\Lc.(=+)) 
evaluates to                  2*a e\Lc i*b

26 October 2021
Removed superfluous bitfield in tFlags. This bitfield caused sizeof(tFlags) to
be too large. Also changed the type of several structure members from void *
to something more meaningfull. Removed struct pointerStruct.

6 October 2021
Field 'range' in struct ccaseconv changed from 'int' to 'unsigned int'.
Cast (T[i].L + T[i].range) to 'unsigned int'
Compare clock_t variable with (clock_t)-1, not -1.

5 August 2021
Experiment: theoretically, match can be speeded up by first checking whether
subject and pattern are the same thing. If they are, the match succeeds,
PROVIDED that the thing doesn't contain any flags and only a subset of
operators. The experiment was not a success: programs became slower, because of
the overhead.

3 August 2021