@@ -1,3 +1,10 @@
+7 February 2023
+First fully debugged version of potu with 'calculation' object type for floating
+point computations. No memory leaking. If 'calculate' method fails, it just says
+that no value was returned. The 'export' method can retrieve array data serialized
+as a string, either formatted as float (R), integer (N), fraction (Q) or as bit-
+preserving hex string ("%a").
+
 30 January 2023
 Undid change made 2022.09.13
 
